--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
     "joi": "^17.13.3",
     "nestjs-joi": "^1.11.0",
     "pg": "^8.16.3",
+    "redis": "^5.7.0",
+    "redis-om": "^0.4.7",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
     "typeorm": "^0.3.25"
