--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "typeorm": "^0.3.25"
   },
   "devDependencies": {
+    "@faker-js/faker": "^9.9.0",
     "@nestjs/cli": "^10.0.0",
     "@nestjs/schematics": "^10.0.0",
     "@nestjs/testing": "^10.0.0",
